--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
-.board{
-border: 2px solid
+.App{
+    text-align: center;
+}
+
+.board {
+    border: 2px solid #888888;
+    width: 400px;
+    height: 300px;
+    margin: 0 auto;
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(4, 1fr);
+}
+
+.square {
+    border: 1px solid #818080;
+    background-color: white;
+    font-size: 60px;
+    coursor: pointer;
+}
+.square-close {
+    background-color: #d2d0d0;
+}
+
+.blocked {
+    pointer-events: none;
 }
